--- a/prueba210/api/departamentos/models/Departamentos.settings.json
+++ b/prueba210/api/departamentos/models/Departamentos.settings.json
@@ -14,6 +14,10 @@
     "nombre": {
       "default": "",
       "type": "string"
+    },
+    "gdfgdfs": {
+      "collection": "gdfgdf",
+      "via": "departamentos"
     }
   }
 }
