--- a/prueba210/api/departamentos/models/Departamentos.settings.json
+++ b/prueba210/api/departamentos/models/Departamentos.settings.json
@@ -18,6 +18,10 @@
     "gdfgdfs": {
       "collection": "gdfgdf",
       "via": "departamentos"
+    },
+    "gdfgd": {
+      "collection": "gdfgdf",
+      "via": "departamento"
     }
   }
 }
