--- a/prueba210/api/procesosadmision/models/Procesosadmision.settings.json
+++ b/prueba210/api/procesosadmision/models/Procesosadmision.settings.json
@@ -15,9 +15,9 @@
       "default": "",
       "type": "string"
     },
-    "organizaciones": {
+    "org": {
       "collection": "organizaciones",
-      "via": "procesosadmisions"
+      "via": "admision"
     }
   }
 }
