--- a/prueba210/api/problema/models/Problema.settings.json
+++ b/prueba210/api/problema/models/Problema.settings.json
@@ -15,9 +15,9 @@
       "default": "",
       "type": "string"
     },
-    "organizaciones": {
+    "org": {
       "collection": "organizaciones",
-      "via": "problemas"
+      "via": "problem"
     }
   }
 }
