--- a/prueba210/api/juzgadomenores/models/Juzgadomenores.settings.json
+++ b/prueba210/api/juzgadomenores/models/Juzgadomenores.settings.json
@@ -15,8 +15,8 @@
       "default": "",
       "type": "string"
     },
-    "organizaciones": {
-      "collection": "organizaciones",
+    "orgs": {
+      "collection": "org",
       "via": "juzgadomenores"
     }
   }
