--- a/prueba210/api/problema/models/Problema.settings.json
+++ b/prueba210/api/problema/models/Problema.settings.json
@@ -16,8 +16,8 @@
       "type": "string"
     },
     "org": {
-      "collection": "organizaciones",
-      "via": "problem"
+      "collection": "org",
+      "via": "problema"
     }
   }
 }
