--- a/prueba210/api/areastrabajo/models/Areastrabajo.settings.json
+++ b/prueba210/api/areastrabajo/models/Areastrabajo.settings.json
@@ -14,6 +14,10 @@
     "nombre": {
       "default": "",
       "type": "string"
+    },
+    "orgs": {
+      "collection": "org",
+      "via": "areastrabajos"
     }
   }
 }
