cambio de relacion
se cambio la relacion a la tabla departamnto

--- a/prueba210/api/org/models/Org.settings.json
+++ b/prueba210/api/org/models/Org.settings.json
@@ -24,8 +24,7 @@
       "type": "boolean"
     },
     "departamentos": {
-      "model": "departamentos",
-      "via": "org"
+      "model": "departamentos"
     },
     "juzgadoejecucion": {
       "model": "juzgadoejecucion"
