--- a/prueba210/api/procesosadmision/models/Procesosadmision.settings.json
+++ b/prueba210/api/procesosadmision/models/Procesosadmision.settings.json
@@ -14,6 +14,10 @@
     "nombre": {
       "default": "",
       "type": "string"
+    },
+    "undefined": {
+      "collection": "org",
+      "via": "procesosadmision"
     }
   }
 }
